14882: Modal dialogs new alignment logic (fixes blurry icons issue).

--- a/css/style.css
+++ b/css/style.css
@@ -8147,11 +8147,20 @@ table.grid-table .dragover td, table.grid-share-table .dragover td, table.contac
     -webkit-background-clip: padding;
     background-clip: padding-box;
 }
-.fm-dialog.fm-modal-dialog {
-    left: 50% !important;
-    top: 50% !important;
-    transform: translate(-50%, -50%)  !important;
+.fm-modal-dialog {
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    position: absolute;
+    z-index: 1200;
+    display: flex;
+}
+.fm-modal-dialog  .fm-dialog {
+    position: relative;
     margin: auto !important;
+    left: 0;
+    top: 0;
 }
 .fm-dialog.share-dialog {
     z-index: 1100;
